syntax = "proto3";

package com.example.datacollector.rpc.protobuf;

option java_outer_classname="InventoryQueryRequestProto";

import "RequestParam.proto";

message InventoryQueryRequestMessage{
  repeated RequestParamMessage requestParam=1;
}
