syntax = "proto3";

package com.example.datacollector.rpc.protobuf;

option java_outer_classname="RequestParamProto";

message RequestParamMessage{
  string name=1;
  string value=2;
}
